# pochi-assistant

./: .env.web.local.sample  .gitignore  docker-compose.yml
asst/: Makefile  hello.py  pyproject.toml  ruff.toml
asst/app/: settings.py  urls.py  views.py
asst/app/graphql/: schema.py
asst/app/graphql/resolvers/query/: ping.py  users.py
asst/app/graphql/types/resources/: user_type.py
asst/containers/local/: Dockerfile
asst/libs/: admin.py  apps.py
asst/libs/migrations/: 0001_initial.py  0002_user.py
asst/libs/models/: __init__.py  admin_user.py  soft_delete_base_model.py  user.py
asst/templates/: base.html  top.html
db/init/: init-user-psql.sh
web/: .gitignore  codegen.ts  package.json  pnpm-lock.yaml
web/containers/local/: Dockerfile
web/src/: App.vue  main.ts
web/src/doc/query/: Ping.ts
web/src/gql/: fragment-masking.ts  gql.ts  graphql.ts
web/src/layouts/: DefaultLayout.vue
web/src/router/: index.ts
web/src/services/: client.ts
web/src/views/: PingView.vue
