[project]
name = "asst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-bootstrap5>=24.3",
    "django>=5.1.4",
    "django-extensions>=3.2.3",
    "psycopg2>=2.9.10",
]

[dependency-groups]
dev = [
    "ruff>=0.8.3",
]
